Added pqueue solution for 24 which kinda works or small input sizes

--- a/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj
+++ b/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj
@@ -143,10 +143,12 @@
     <ClCompile Include="AdventOfCode2022.cpp" />
     <ClCompile Include="Source\Helpers\AoCHelpers.cpp" />
     <ClCompile Include="Source\Solution1\AoCSolution1.cpp" />
+    <ClCompile Include="Source\Solution24\AoCSolution24.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Helpers\AoCHelpers.h" />
     <ClInclude Include="Source\Solution1\AoCSolution1.h" />
+    <ClInclude Include="Source\Solution24\AoCSolution24.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
