--- a/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj
+++ b/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Source\Solution1\AoCSolution1.cpp" />
     <ClCompile Include="Source\Solution24\AoCSolution24.cpp" />
     <ClCompile Include="Source\Solution5\AoCSolution5.cpp" />
+    <ClCompile Include="Source\Solution9\AoCSolution9.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Helpers\AoCHelpers.h" />
@@ -153,6 +154,7 @@
     <ClInclude Include="Source\Solution1\AoCSolution1.h" />
     <ClInclude Include="Source\Solution24\AoCSolution24.h" />
     <ClInclude Include="Source\Solution5\AoCSolution5.h" />
+    <ClInclude Include="Source\Solution9\AoCSolution9.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
