--- a/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj.filters
+++ b/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Source\Solution10\AoCSolution10.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Solution9\AoCSolution9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Helpers\AoCHelpers.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Solution10\AoCSolution10.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Solution9\AoCSolution9.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
