--- a/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj
+++ b/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Source\Solution10\AoCSolution10.cpp" />
     <ClCompile Include="Source\Solution1\AoCSolution1.cpp" />
     <ClCompile Include="Source\Solution24\AoCSolution24.cpp" />
+    <ClCompile Include="Source\Solution3\AoCSolution3.cpp" />
     <ClCompile Include="Source\Solution5\AoCSolution5.cpp" />
     <ClCompile Include="Source\Solution9\AoCSolution9.cpp" />
   </ItemGroup>
@@ -153,6 +154,7 @@
     <ClInclude Include="Source\Solution10\AoCSolution10.h" />
     <ClInclude Include="Source\Solution1\AoCSolution1.h" />
     <ClInclude Include="Source\Solution24\AoCSolution24.h" />
+    <ClInclude Include="Source\Solution3\AoCSolution3.h" />
     <ClInclude Include="Source\Solution5\AoCSolution5.h" />
     <ClInclude Include="Source\Solution9\AoCSolution9.h" />
   </ItemGroup>
